# django-oauth-client

./: .gitignore  .readthedocs.yaml  README.rst  pyproject.toml  requirements.txt
docs/: conf.py  index.rst  requirements.txt
docs/Pages/: configuration.rst  customization.rst  howto.rst  instalation.rst  providers.rst  urls.rst  views.rst
docs/Pages/guides/: create-new-provider.rst  customize-urls.rst  customize-views.rst  extend-OAuth2Account.rst  oauth2-workflow.rst
oauth_client/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
oauth_client/migrations/: 0001_initial.py
oauth_client/providers/: __init__.py  discord.py  errors.py  faceit.py  oauth2.py
