[tool.poetry]
name = "django-oauth-client"
version = "0.1.1"
description = "Django OAuth Client"
authors = ["max <max.vojtkov@gmail.com>"]
license = "MIT"
packages = [
    { include = "oauth_client" },
]
readme = "README.rst"
homepage = "https://daoi-source.com"
repository = "https://github.com/3h04m1/django-oauth-client"
keywords = ["django", "oauth", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
Django = "^4.1.1"
requests = "^2.28.1"
colorama = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"